force-app/main/default/objects/Role_Approve_process__c.object
<CustomObject>
    <description>Role Approve process</description>
    <fields>
        <fullName>Application_name__c</fullName>
        <label>Application name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report to</label>
        <referenceTo>Role_Approve_process__c</referenceTo>
        <relationshipLabel>Role Approve process</relationshipLabel>
        <relationshipName>Role_Approve_process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_to_name__c</fullName>
        <description>Report to name</description>
        <label>Report to name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Role Approve process</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>